--- a/public/stylesheets/wysiwyg/jquery.wysiwyg.css
+++ b/public/stylesheets/wysiwyg/jquery.wysiwyg.css
@@ -1,7 +1,8 @@
 
 div.wysiwyg * { margin: 0; padding: 0; }
 div.wysiwyg { width: auto !important; }
-div.wysiwyg iframe { width: 266px !important; min-height: 200px !important; height: 200px !important; padding: 10px !important; }
+div.widget div.wysiwyg iframe { width: 266px !important; min-height: 200px !important; height: 200px !important; padding: 10px !important; }
+#main article div.wysiwyg iframe { width: 516px !important; min-height: 300px !important; height: 300px !important; padding: 10px !important; }
 
 div.wysiwyg ul.toolbar li.jwysiwyg-custom-command { overflow: hidden; }
 
