--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -19,12 +19,15 @@
           - if @reference
             %a#single_verse_read_link.action_button_green{:href => reference_path(@reference)}= t("read reference", reference: @reference.ref_string)
       %aside
-        %p.gutter_bottom_half
-          %a{:href => '#'}
-            %img{:src => '/images/button_share_on_facebook.png', :alt => 'Share on Facebook'}
-        %p.gutter_bottom_half
-          %a{:href => '#'}
-            %img{:src => '/images/button_share_on_twitter.png', :alt => 'Share on Twitter'}
-        %p.gutter_bottom_half
-          %a{:href => '#'}
-            %img{:src => '/images/button_get_qr_code.png', :alt => 'Get QR Code'}
+        %div{style: "height: 36px;"}
+          %a{href: "http://twitter.com/share", class: "twitter-share-button", "data-url" => @single_verse.short_link, "data-counturl" => request.url, "data-text" => @single_verse.contents[0].chomp, via: "YouVersion", "data-count" => "horizontal", "data-related" => "youversion"} Tweet
+          %script{type: "text/javascript", src: "http://platform.twitter.com/widgets.js"}
+        %div{style: "height: 40px;"}
+          %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"} Share
+          %script{src: "http://static.ak.fbcdn.net/connect.php/js/FB.Share", type: "text/javascript"}
+        %div{style: "height: 40px;"}
+          %g:plusone{size: "medium"}
+          :javascript
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            po.src = 'https://apis.google.com/js/plusone.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
