--- a/app/views/pages/api_timeout.html.haml
+++ b/app/views/pages/api_timeout.html.haml
@@ -4,5 +4,7 @@
   %h1 Traffic Jam!
   %hr
   %div{style:"text-align: center; margin-top: 70px"}
-    %p API Timeout...
-    %p.small = @error.class
+    %p Over 6,000 Bible chapter views per second is a lot of traffic!! Unfortunately your request timed-out. You can try again by reloading the page!
+    %br
+    %p We're working hard to widen the roads in hopes that you never see this page again!
+    %p.small.mute= "#{@error.class} : @error.to_s"
