beginnings for andy to look at

--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -56,6 +56,9 @@
 #nav_primary_bible span
   background:
     image: url(../images/nav_bible.png)
+#nav_primary_bible span:hover
+  background:
+    image: url(../images/nav_bible_active.png)
 
 #nav_primary_plans span
   background:
