--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -29,7 +29,7 @@
 #nav_primary span
   background:
     repeat: no-repeat
-    position: center 5px
+    position: center 10px
   border-top: 1px solid rgba(#fff, 0.15)
   border-bottom: 1px solid rgba(#000, 0.5)
   display: block
@@ -38,8 +38,8 @@
   overflow: hidden
   text-align: center
   text-shadow: #000 0 1px 0
-  padding-top: 40px
-  padding-bottom: 7px
+  padding-top: 50px
+  padding-bottom: 10px
 
 #nav_primary a
   background: url(../images/nav_primary_a.png) no-repeat -99999px -99999px
@@ -56,7 +56,8 @@
 #nav_primary_bible span
   background:
     image: url(../images/nav_bible.png)
-#nav_primary_bible span:hover
+#nav_primary_bible span:hover,
+#nav_primary_bible.highlighted span
   background:
     image: url(../images/nav_bible_active.png)
 
