--- a/app/views/search/_plans_list_item.html.haml
+++ b/app/views/search/_plans_list_item.html.haml
@@ -1,5 +1,5 @@
 %li
-  %a= link_to YouVersion::Resource.i18nize(item.name), plan_path(item.slug)
+  %a= link_to YouVersion::Resource.i18nize(item.name), plan_path(item.to_param)
   %p= YouVersion::Resource.i18nize(item.about)
   
   / {"id"=>"20",
