--- a/app/views/plans/settings.html.haml
+++ b/app/views/plans/settings.html.haml
@@ -15,9 +15,9 @@
           = @subscription.length
       - if !current_user.subscribed_to? @subscription
         %li
-          = link_to(t("plans.view sample"), @subscription.slug)
+          = link_to(t("plans.view sample"), @subscription.to_param)
       %li
-        = link_to(t("plans.users subscribed", user_count: @subscription.users.count), plan_users_path(@subscription.slug))
+        = link_to(t("plans.users subscribed", user_count: @subscription.users.count), plan_users_path(@subscription.to_param))
   .widget
     %header
       %span
