--- a/app/views/search/_users_list_item.html.haml
+++ b/app/views/search/_users_list_item.html.haml
@@ -5,9 +5,8 @@
       %img{src: u.user_avatar_url.px_48x48, style:"margin-top:2px"}
   %p.float_left
     = link_to u.name || u.username, u
-    - if u.name
-      %br
-      = u.username
+    %br
+    %span.mute= u.location || u.country
   %div.float_right{style: "text-align: right;"}
     - if current_user && current_user.following_user_id_list.include?(u.id.to_i)
       %form{action: user_unfollow_path(u.username), method: "post"}
