--- a/app/assets/sass/_bulleted_lists.sass
+++ b/app/assets/sass/_bulleted_lists.sass
@@ -9,10 +9,10 @@ li ul
 #main article ol
   margin-top: -10px
 
-#main article li:not(.wysiwyg li)
+#main article li
   padding-top: 10px
 
-#main article ul li:not(.wysiwyg li)
+#main article ul li
   background:
     image: url(../images/main_article_ul_li_arrow.png)
     repeat: no-repeat
