--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -1,9 +1,9 @@
 - links = [{path: profile_path, string: t('users.edit profile')},
-           {path: password_path, string: t('users.change password')},
-           {path: picture_path, string: t('users.picture')},
-           {path: notifications_path, string: t('users.manage notifications')},
-           {path: connections_path, string: t('users.connected accounts')},
-           {path: devices_path, string: t('users.connected devices')}]
+           {path: password_path, string: t('users.edit password')},
+           {path: picture_path, string: t('users.edit picture')},
+           {path: notifications_path, string: t('users.edit notifications')},
+           {path: connections_path, string: t('users.edit connections')},
+           {path: devices_path, string: t('users.edit devices')}]
 .widget
   %header
     %span.header_icon_gear
