--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -6,11 +6,15 @@
     - unless content_for?(:sidebar)
       - # Default sidebar
       - content_for :sidebar do
-        = render "shared/widget_profile_settings"
+        = render "shared/widget_profile_settings" if @selected != :recent_activity
         = render "shared/widget_user_badges" unless @user.badges.empty?
     = render(partial: "user_info", locals: {user: @user}) if @selected == :recent_activity
     %article
-      %h1= t("my #{@selected.to_s}")
+      - if @selected == :recent_activity
+        %h1= t("my #{@selected.to_s}")
+      - else
+        %h1= t("settings")
+        %h4= t("users.edit #{@selected}")
       = content_for?(:user_main) ? yield(:user_main) : yield
   - else
     - # I'm looking at someone else, show their info and stuff
