--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -87,8 +87,19 @@
 .split_devotional_pane form
   position: static !important
   margin-top: 10px
+
 .split_devotional_pane .embedded_reader 
   margin-top: 5px !important
+  
+.split_devotional_pane.highlighted
+  border-right-color: #EEE
+  border-right-style: solid
+  border-right-width: 1px
+
+.split_devotional_pane.highlighted a,
+.split_devotional_pane.highlighted a:hover
+  background: none !important
+  font-size: 15px !important
 
 .subscription_plan_links p
   margin: 10px 0 0 0
@@ -97,10 +108,10 @@
   background: url(../images/icon_info_blue.png) no-repeat 2px center
   padding: 5px 5px 5px 22px
   display: block
-  margin-bottom: 10px
+  margin-bottom: 15px
 .about_plan a
   background: url(../images/icon_copyright.png) no-repeat left center
   padding: 5px 5px 5px 22px
-  margin-bottom: 10px
+  margin-bottom: 15px
   display: block
 
