--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -20,81 +20,6 @@
       
   .split_pane{:style => "padding-top:15px"}
     - if @reading.devotional
-      .split_pane_sidebar{style: "width: 424px"}
-        %dl.categories_menu
-          %dt
-            %ul.pagination{style: "margin-bottom: 0px; margin-top: 0px; padding-top:0px; border-top-width: 0px;", align: "center"}
-              %li.pagination_previous.float_left
-                - if @day > 1
-                  = link_to(t("plans.previous day"),day: @day - 1)
-              %li.pagination_next.float_right
-                - if @day <= @subscription.total_days - 1
-                  = link_to(t("plans.next day"), day: @day + 1)
-              %div{style: "text-align: center; width: 175px; margin: 0 auto"}
-                %h4{style: "margin-bottom: 0px; margin-top: -4px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : current_date + (@day - 1)).strftime('%a %b %-d')
-                .mute{style: "font-weight: normal"}=t("plans.which day in plan", day: @day.to_s, total: @subscription.total_days)
-          - if @reading.references
-            - @reading.references.each_with_index do |r,i|
-              %dd.split_devotional_pane
-                - if @subscription.is_a? Subscription                
-                  %form{method: 'post'}
-                    %input{type: "hidden", name: "_method", value: "put"}
-                    %input{type: "hidden", name: "ref", value: r.ref.osis}
-                    %input{type: "hidden", name: "completed", value: (!r.completed?).to_s}
-                    - if @day != @subscription.current_day
-                      %input{type: "hidden", name: "day_target", value: @day.to_s}
-                    - if @content_page != 0
-                      %input{type: "hidden", name: "content_target", value: @content_page}
-                    %input{type: "checkbox", onChange: "this.form.submit()", id: "#{i}_box",  checked: r.completed? ? "checked" : nil}
-                    %b= r.ref.ref_string
-                .embedded_reader{style: "font-weight: normal; margin-top: 10px; padding-left: 30px; padding-bottom: 15px; margin-right: 30px; font-size: 14px; line-height: 25px"}= r.ref.contents(format: 'html').join.html_safe
-          .subscription_plan_links
-            %p.about_publisher= link_to(t("plans.about the publisher"), @subscription.publisher_url)
-            %p.about_plan= link_to(t("plans.about this plan"), ignore_subscription: true)
-      .split_pane_content{style: "width: 423px"}
-        %div{style: "margin-left: 20px; margin-right: 5px;"}= @reading.devotional.html_safe
-
-    - else #No devotional content
-      .split_pane_sidebar
-        %dl.categories_menu
-          %dt
-            %ul.pagination{style: "margin-bottom: 0px; margin-top: 0px; padding-top:0px; border-top-width: 0px;", align: "center"}
-              %li.pagination_previous.float_left
-                - if @day > 1
-                  = link_to(t("plans.previous day"),day: @day - 1)
-              %li.pagination_next.float_right
-                - if @day <= @subscription.total_days - 1
-                  = link_to(t("plans.next day"), day: @day + 1)
-              %div{style: "text-align: center; width: 175px; margin: 0 auto"}
-                %h4{style: "margin-bottom: 0px; margin-top: -4px;"}= (@subscription.respond_to?(:reading_date) ? @subscription.reading_date(@day) : current_date + (@day - 1)).strftime('%a %b %-d')
-                .mute{style: "font-weight: normal"}=t("plans.which day in plan", day: @day.to_s, total: @subscription.total_days)
-          - if @reading.references
-            - @reading.references.each_with_index do |r,i|
-              %dd{class: @content_page == i ? "highlighted" : ""}
-                - if @subscription.is_a? Subscription
-                  %form.float_left{method: 'post'}
-                    %input{type: "hidden", name: "_method", value: "put"}
-                    %input{type: "hidden", name: "ref", value: r.ref.osis}
-                    %input{type: "hidden", name: "completed", value: (!r.completed?).to_s}
-                    - if @day != @subscription.current_day
-                      %input{type: "hidden", name: "day_target", value: @day.to_s}
-                    - if @content_page != 0
-                      %input{type: "hidden", name: "content_target", value: @content_page}
-                    %input{type: "checkbox", onChange: "this.form.submit()", id: "#{i}_box",  checked: r.completed? ? "checked" : nil}
-                %a{href: plan_path(@subscription.to_param, day: @day.to_s, content: (i > 0 ? i.to_s : nil)), style: "margin-top: 2px"}= r.ref.ref_string
-          .subscription_plan_links
-            %p.about_publisher= link_to(t("plans.about the publisher"), @subscription.publisher_url)
-            %p.about_plan= link_to(t("plans.about this plan"), ignore_subscription: true)
-      .split_pane_content
-        - if @reading.references
-          .embedded_reader{style: "padding-left: 30px; padding-bottom: 30px;"}= @reading.references[@content_page].ref.contents(format: 'html').join.html_safe
-          - if @subscription.is_a? Subscription
-            %form{method: 'post'}
-              %input{type: "hidden", name: "_method", value: "put"}
-              %input{type: "hidden", name: "ref", value: @reading.references[@content_page].ref.osis}
-              %input{type: "hidden", name: "completed", value: true.to_s}
-              %input{type: "hidden", name: "day_target", value: @day.to_s}
-              %input{type: "hidden", name: "content_target", value: @content_page + 1}
-              %button.action_button_green.float_right{type: "submit", name: "done_read"}= t('plans.reading completed (mark and show next)')
-          - else 
-            .float_right= link_to(t('plans.next reading'), plan_path(@subscription.to_param, day: @day, content: @content_page + 1), class: 'action_button_green') if @reading.references.count - 1 > @content_page
+      = render partial: "show_devotional"
+    - else
+      =render partial: "show_no_devo"
