--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -7,7 +7,7 @@
       %li#nav_primary_bookmarks{class: @nav == :bookmarks ? "highlighted" : ""}
         %a{:href => current_auth ? user_bookmarks_path(current_auth.username) : sign_up_path(source: "bookmark", redirect: "/bookmarks")}
           %span Bookmarks
-      %li#nav_primary_plans
+      %li#nav_primary_plans{class: @nav == :plans ? "highlighted" : ""}
         %a{:href => current_auth ? user_plans_path(current_auth.username) : plans_path}
           %span=t("plans title")
       %li#nav_primary_notes{class: @nav == :notes ? "highlighted" : ""}
