forgot about footer link
Change-Id: I8d11a346157f094c863768d17f89b0562b03dbe3

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,7 +5,7 @@
     %a{:href => 'http://www.lifechurch.tv'}=t("lifechurch short url")
     %span.separator
       |
-    %a{:href => '#'}=t("about")
+    %a{:href => about_path}=t("about")
     %span.separator
       |
     %a{:href => '#'}=t("jobs")
