adds press page (assets on s3), closes #175
Change-Id: I901e2a623e53232d4eac18fd17ded6c7d78e4c43

--- a/app/assets/sass/_pages.sass
+++ b/app/assets/sass/_pages.sass
@@ -13,3 +13,18 @@
 
 .partner h4
   margin-bottom: 0
+
+#main article.press
+  ul.press_resources
+    list-style: none
+    li
+      list-style: none
+      margin: 0
+      padding: 0
+      background: none
+      margin-bottom: 20px
+      a
+        float: right
+      h4
+        line-height: 35px
+        margin-bottom: 0px
