--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -1,3 +1,37 @@
+- content_for :sidebar do
+  .widget
+    %header
+      %span= t('press page.contact header')
+    %ul.widget_menu
+      %li
+        %p
+          %strong= t('press page.phone')
+          %br
+          405.216.2332
+      %li
+        %p
+          %strong= t('press page.email')
+          %br
+          lori.bailey@lifechurch.tv
+  .widget
+    %header
+      %span= t('press page.contact header 2')
+    %ul.widget_menu
+      %li
+        %p
+          %strong= t('press page.blog')
+          %br
+          =link_to "blog.youversion.com", "http://blog.youversion.com"
+      %li
+        %p
+          %strong= t('press page.facebook')
+          %br
+          =link_to "facebook.com/youversion", "http://facebook.com/youversion"
+      %li
+        %p
+          %strong= t('press page.twitter')
+          %br
+          =link_to "twitter.com/youversion", "http://twitter.com/youversion"
 %article.press
   %h1= t('press page.title')
   %p{style: "text-align: center;"}
