added footer links, closes #89
Change-Id: I42157fa6ab74b6256269da68b2275a58969e1e23

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -8,7 +8,7 @@
     %a{:href => about_path}=t("about")
     %span.separator
       |
-    %a{:href => '#'}=t("jobs")
+    %a{:href => 'http://blog.youversion.com/jobs'}=t("jobs")
     %span.separator
       |
     %a{:href => privacy_path}=t("privacy policy")
@@ -17,10 +17,10 @@
     %a{:href => terms_path}=t("terms")
     %span.separator
       |
-    %a{:href => '#'}=t("press")
+    %a{:href => 'press_path'}=t("press")
     %span.separator
       |
-    %a{:href => '#'}=t("support")
+    %a{:href => 'http://support.youversion.com'}=t("support")
     %span.separator
       |
     %a{:href => donate_path}=t("donate title")
