--- a/app/assets/sass/_reference_tokens.sass
+++ b/app/assets/sass/_reference_tokens.sass
@@ -65,6 +65,17 @@
 		position: right -23px, center center
 		size: auto
 
+.reference_tokens.read_only > li a
+	padding: 2px 10px 2px 10px
+	background-position: right 40px, center center
+.reference_tokens.read_only > li a:hover
+
+#main article ul.reference_tokens
+	li
+		list-style: none
+		background-image: none
+		padding-left: 0
+
 #add_reference_token input
 	background: #767474 !important
 	display: none 
