--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,4 +1,4 @@
-#menu_version.dynamic_menu
+#menu_version.dynamic_menu{style: "#{@force_top ? 'top: ' +  @force_top : ''}"}
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
@@ -10,18 +10,18 @@
       - @this_language.each do |k, v|
         %tr
           %th
-            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= k.upcase.match(/\A[^-]*/)
+            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : plan_path(version: v.osis)}= k.upcase.match(/\A[^-]*/)
           %td
-            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= v.title
+            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : plan_path(version: v.osis)}= v.title
       - @all_languages.each do |k, v|
         %tr
           %th{:colspan => '2'}= @languages[k]
         - v.each do |kk, vv|
           %tr
             %th
-              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase.match(/\A[^-]*/)
+              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : plan_path(version: vv.osis)}= kk.upcase.match(/\A[^-]*/)
             %td
-              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= vv.title
+              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : plan_path(version: vv.osis)}= vv.title
 #menu_alt_version.dynamic_menu
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
