--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -19,6 +19,7 @@
 #nav_primary li
   margin: 0
   list-style: none
+  position: relative
 
 #nav_primary .highlighted
   background: url(../images/nav_primary_highlighted.png) no-repeat left center
@@ -26,7 +27,7 @@
   margin-right: -5px
   padding-right: 5px
 
-#nav_primary span
+#nav_primary a span
   background:
     repeat: no-repeat
     position: 0 10px
@@ -35,14 +36,15 @@
   display: block
   font-size: 11px
   line-height: 1
+  height: 0
   overflow: hidden
   text-align: center
   text-shadow: #000 0 1px 0
   padding-top: 50px
-  padding-bottom: 10px
+  padding-bottom: 4px
 
-#nav_primary span:hover,
-#nav_primary li.highlighted span
+#nav_primary a span:hover,
+#nav_primary li.highlighted a span
   background:
     position: -60px 10px
 
@@ -58,30 +60,50 @@
     position: center center
   color: #fff
 
-#nav_primary_bible span
+#nav_primary_bible a span
   background:
     image: url(../images/nav_bible.png)
     
-#nav_primary_plans span
+#nav_primary_plans a span
   background:
     image: url(../images/nav_plans.png)
 
-#nav_primary_notes span
+#nav_primary_notes a span
   background:
     image: url(../images/nav_notes.png)
 
-#nav_primary_bookmarks span
+#nav_primary_bookmarks a span
   background:
     image: url(../images/nav_bookmarks.png)
 
-#nav_primary_friends span
+#nav_primary_friends a span
   background:
     image: url(../images/nav_group.png)
 
-#nav_primary_groups span
+#nav_primary_groups a span
   background:
     image: url(../images/nav_group.png)
 
-#nav_primary_mobile span
+#nav_primary_mobile a span
   background:
     image: url(../images/nav_mobile.png)
+
+.tooltip
+  height: 31px
+  padding-left: 10px
+  margin-left: -10px
+  background: url(../images/bg-menu-tooltip-left.png) no-repeat left
+  position: absolute
+  left: 56px
+  top: 13px
+  z-index: 9
+
+.tooltip span
+  display: block
+  line-height: 31px
+  padding: 0 14px 0 10px
+  color: white
+  font-weight: bold
+  text-shadow: 0 1px 1px #000
+  background: url(../images/bg-menu-tooltip-right.png) no-repeat right
+
