--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -7,4 +7,4 @@
       %h4= "#{d.vendor} #{d.model}"
       %p.mute.negative_gutter_top_half
         = d.os
-        = "(#{t('registered')} #{time_ago_in_words(d.created_date)} #{t('ago')})"
+        = t('registered ago', time_ago: time_ago_in_words(d.created_date))
