fixed various user styles, closes #159
Change-Id: I8583d3c49f15f221ae55cc76cceaa3efb23bee6a

--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -97,6 +97,7 @@
   left: 56px
   top: 13px
   z-index: 9
+  cursor: default
 
 .tooltip span
   display: block
@@ -106,4 +107,5 @@
   font-weight: bold
   text-shadow: 0 1px 1px #000
   background: url(../images/bg-menu-tooltip-right.png) no-repeat right
+  cursor: default
 
