--- a/app/views/users/likes.html.haml
+++ b/app/views/users/likes.html.haml
@@ -1,4 +1,8 @@
 - content_for :user_main do
-  %ul.big_list
-    = render partial: 'likes/list', collection: @likes, locals: {display: :icon}
-  = render partial: 'shared/pagination', locals: {resource_list: @likes}
+  - if @likes.empty?
+    %p= t('no likes found', username: @user.username)
+
+  - else
+    %ul.big_list
+      = render partial: 'likes/list_item', collection: @likes, locals: {display: :avatar}
+    = render partial: 'shared/pagination', locals: {resource_list: @likes}
