--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -1,4 +1,7 @@
 - content_for :user_main do
-  %ul.big_list
-    = render partial: 'notes/list_item', collection: @notes, locals: {display: :icon}
-  = render partial: 'shared/pagination', locals: {resource_list: @notes}
+  - if @notes.empty?
+    %p= t('no notes found', username: @user.username)
+  - else
+    %ul.big_list
+      = render partial: 'notes/list_item', collection: @notes, locals: {display: :icon}
+    = render partial: 'shared/pagination', locals: {resource_list: @notes}
