--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -7,4 +7,4 @@
     -#= button_to(@bookmark.likes(:user_id => current_user.id).nil? ? 'like' : 'unlike', like_path(@note.id), :method => :put) if @note.user_status == 'public' && current_user
     - if current_user && (current_auth.user_id.to_i == @bookmark.user_id.to_i)
       = link_to('edit', edit_bookmark_path(@bookmark.id)) 
-      = link_to('delete this bookmark', bookmark_path(@bookmark.id), :confirm => 'Are you sure?', :method => :delete) 
+      %span.confirm= link_to('delete this bookmark', bookmark_path(@bookmark.id), "data-confirm-text" => t('confirm danger'), :method => :delete) 
