--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,4 +1,4 @@
-#menu_version.dynamic_menu{style: "#{@force_top ? 'top: ' +  @force_top : ''}"}
+#menu_version.dynamic_menu{style: @force_style}
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
