--- a/app/views/shared/_menu_audio_player.html.haml
+++ b/app/views/shared/_menu_audio_player.html.haml
@@ -1,4 +1,5 @@
-#menu_audio_player.dynamic_menu
+- force_style ||= nil
+#menu_audio_player.dynamic_menu{style: force_style}
   %span.menu_arrow
     &nbsp;
   - if @reference.audio
