--- a/app/views/plans/_show_no_devo.html.haml
+++ b/app/views/plans/_show_no_devo.html.haml
@@ -13,5 +13,7 @@
     = render partial: 'plan_links', locals: {plan: @subscription}
 .split_pane_content
   - if @reading.references
+    %span.float_right{style: "margin-top: -6px"}
+      =render partial: 'ref_buttons', locals: {reference: @reading.references[@content_page].ref}
     .embedded_reader{style: "padding-left: 30px; padding-bottom: 30px;"}= @reading.references[@content_page].ref.contents(format: 'html').join.html_safe
     = render partial: 'reading_completed_button', locals: {plan: @subscription, cur_reading_index: @content_page, reading: @reading, day: @day}
