--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -41,7 +41,7 @@
   border-bottom: 1px solid #ccc
 
 .split_pane_sidebar dt,
-.split_pane_sidebar dd a
+.split_pane_sidebar dd a:not(.no_style)
   padding: 15px 10px
 
 .split_pane_sidebar dt
@@ -52,14 +52,14 @@
   font-size: 13px
   position: relative
 
-.split_pane_sidebar dd a
+.split_pane_sidebar dd a:not(.no_style)
   color: $body_text
   display: block
   text-decoration: none
   padding-left: 32px
 
 
-.split_pane_sidebar dd a:hover
+.split_pane_sidebar dd a:hover:not(.no_style)
   background:
     color: rgba(#000, 0.05)
 
@@ -70,8 +70,8 @@
   position: relative
   z-index: 1
 
-.split_pane_sidebar .highlighted a,
-.split_pane_sidebar .highlighted a:hover
+.split_pane_sidebar .highlighted a:not(.no_style),
+.split_pane_sidebar .highlighted a:hover:not(.no_style)
   background: url(../images/split_pane_sidebar_highlighted_a.png) no-repeat right center
   color: $blue
   padding-left: 32px
@@ -96,9 +96,13 @@
   border-right-style: solid
   border-right-width: 1px
 
-.split_devotional_pane.highlighted a,
-.split_devotional_pane.highlighted a:hover
+.split_devotional_pane.highlighted a:not(.no_style),
+.split_devotional_pane.highlighted a:hover:not(.no_style)
   background: none !important
+  font-size: 15px !important
+  
+.split_devotional_pane a:not(.no_style),
+.split_devotional_pane a:hover:not(.no_style)
   font-size: 15px !important
 
 .subscription_plan_links p
