adds badges views, closes #123
Change-Id: Ie57d046011fa9c14b5dd13dc5a3d3099ccb42310

--- a/app/views/users/_user_tabs.html.haml
+++ b/app/views/users/_user_tabs.html.haml
@@ -14,3 +14,6 @@
   %li{class: ("highlighted" if selected == :likes)}
     %a{href: user_likes_path(@user)}
       %span= t('likes.likes')
+  %li{class: ("highlighted" if selected == :badges)}
+    %a{href: user_badges_path(@user)}
+      %span= t('badges title')
