--- a/app/views/shared/_widget_user_badges.html.haml
+++ b/app/views/shared/_widget_user_badges.html.haml
@@ -3,8 +3,14 @@
     %span.header_icon_badge= @me ? t('badges.my badges') : t('badges.user badges', user: (@user.first_name || @user.username))
   %section
     %table
+      %tfoot
+        %tr
+          %th
+            &nbsp;
+          %td.align_right
+            %a.more_arrow{:href => user_badges_path(@user.username)}= t('see users badges', username: @user.username)
       %tbody
-        - @user.badges.each do |b|
+        - @user.badges.first(4).each do |b|
           %tr
             %th
               %img{:height => '48', :width => '48', :src => b.image_url["px_48x48"]}
