adding disabled checkbox for unsubscribed users previewing a plan, killed selected dd background for devotional plans, only show 'next' button on devo plans for refs with more than 5 verses, center version dropdown under start/read buttons

--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -105,6 +105,9 @@
 .split_devotional_pane a:hover:not(.no_style)
   font-size: 15px !important
 
+dd.split_devotional_pane.highlighted
+  background: none
+
 .subscription_plan_links p
   margin: 10px 0 0 0
 
