embedded reader styling

--- a/app/assets/sass/application.sass
+++ b/app/assets/sass/application.sass
@@ -28,6 +28,7 @@
 @import reference_tokens
 @import full_screen
 @import parallel_mode
+@import embedded_reader
 @import audio_player
 @import picker_modals
 @import bookmarks
