--- a/app/views/pages/mobile.html.haml
+++ b/app/views/pages/mobile.html.haml
@@ -1,1 +1,68 @@
+- @sidebar = false
 %article.mobile
+	%section#mobile_content.float_left
+		%h2
+			Engage with scripture like never before.
+		%section.main
+			%p
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in porta urna. Vestibulum dapibus consequat auctor. Aliquam at enim non lorem fringilla lacinia. Curabi.tur blandit turpis pellentesque enim pharetra et mollis urna blandit. Sed rhoncus leo ut est euismod nec dignissim. 
+		%section.multilingual.float_left
+			%img{:src => "images/mobile_multilingual.png"}
+			%h3
+				Youversion is Multilingual
+			%p
+				Available in hundreds of languages worldwide.
+	%section#mobile_downloads.float_right
+		%h3
+			Download The Bible App Now
+		%ul.left_column.float_left
+			%li#dl_iphone
+				%a{:href => "http://youversion.com/mobile/iphone"}
+					iPhone
+			%li#dl_android
+				%a{:href => "http://youversion.com/mobile/android"}
+					Android
+			%li#dl_blackberry
+				%a{:href => "http://youversion.com/mobile/blackberry"}
+					BlackBerry
+			%li#dl_windows
+				%a{:href => "http://youversion.com/mobile/wp"}
+					Windows
+		%ul.right_column.float_right
+			%li#dl_hppalm
+				%a{:href => "http://youversion.com/mobile/palm"}
+					HP/Palm
+			%li#dl_java
+				%a{:href => "http://youversion.com/mobile/Java"}
+					Java
+			%li#dl_symbian
+				%a{:href => "http://youversion.com/mobile/symbian"} Symbian
+			%li#dl_mobile
+				%a{:href => "http://youversion.com/mobile/mobile-web"}
+					Mobile
+		%a.cta
+			%img.float_left{:src => "images/mobile_download.png"}
+			%h4 
+				Go to youversion.com/download
+			%span
+				On your mobile device
+	%div.clear
+	%section.testimonials
+		%h2
+			What people are saying about the free Bible app...
+		%ul
+			%li
+				%h3
+					Great App, Great Features
+				%p
+					I love this app. The reading plans and numerous translations to choose from make for a wonderful reading experience.
+			%li
+				%h3
+					Great App, Great Features
+				%p
+					I love this app. The reading plans and numerous translations to choose from make for a wonderful reading experience.
+			%li
+				%h3
+					Great App, Great Features
+				%p
+					I love this app. The reading plans and numerous translations to choose from make for a wonderful reading experience.
